Dynamic paint sub-steps doesn't work when brush is parented to a constrained object #34685

Closed
opened 2013-03-19 00:10:25 +01:00 by David Haymond · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 64-bit, NVIDIA Geforce GTX 460

- Blender version with error ---

Blender 2.66a official build (r55078)

- Short description of error ---

When using a dynamic paint brush that is parented to an object that moves via constraint (for example, the Follow Path constraint), the dynamic paint canvas sub-steps setting has no effect. If the brush has keyframes, the sub-steps work fine. If the brush is a child of a keyframed parent, the sub-steps work fine. But if the brush is parented to an object with no keyframes but instead is constrained, the sub-steps has no effect.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

To reproduce the error:

Create a plane and add a dynamic paint canvas to it. Add a bezier circle. Add an object (such as an empty) and add the Follow Path constraint and animate the path so that the object travels around the circle very rapidly while intersecting the plane. Add another object (such as a cylinder), scale it down, make it a dynamic paint brush, and parent it to the constrained empty. On the plane canvas settings, set the format to Image Sequence, increase the sub-steps to 8 and bake. The resulting image sequence will NOT have sub-steps applied.

If the empty (the parent) had been keyframed instead of constrained, the sub-step setting applies correctly. But when it is constrained, child paint brushes always have a sub-step of 0.%%%

%%%--- Operating System, Graphics card --- Windows 7 64-bit, NVIDIA Geforce GTX 460 - Blender version with error --- Blender 2.66a official build (r55078) - Short description of error --- When using a dynamic paint brush that is parented to an object that moves via constraint (for example, the Follow Path constraint), the dynamic paint canvas sub-steps setting has no effect. If the brush has keyframes, the sub-steps work fine. If the brush is a child of a keyframed parent, the sub-steps work fine. But if the brush is parented to an object with no keyframes but instead is constrained, the sub-steps has no effect. - Steps for others to reproduce the error (preferably based on attached .blend file) --- To reproduce the error: Create a plane and add a dynamic paint canvas to it. Add a bezier circle. Add an object (such as an empty) and add the Follow Path constraint and animate the path so that the object travels around the circle very rapidly while intersecting the plane. Add another object (such as a cylinder), scale it down, make it a dynamic paint brush, and parent it to the constrained empty. On the plane canvas settings, set the format to Image Sequence, increase the sub-steps to 8 and bake. The resulting image sequence will NOT have sub-steps applied. If the empty (the parent) had been keyframed instead of constrained, the sub-step setting applies correctly. But when it is constrained, child paint brushes always have a sub-step of 0.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Thanks for the report! This is now fixed in r55517.%%%

%%%Thanks for the report! This is now fixed in r55517.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34685
No description provided.