Fix [#34685]: Dynamic paint sub-steps don't work if brush is animated through parent chain longer than 2 objects.

Maximum number of parents updated is now 5. Hopefully this will be enough until Blender has better subframe sampling system.